--- a/app/[locales]/login/page.module.css
+++ b/app/[locales]/login/page.module.css
@@ -5,53 +5,5 @@
   background-repeat: no-repeat;
   width: 100vw;
   height: 100vh;
-}
-
-.formContainer {
-  height: 70%;
-  width: 40%;
-  background-color: white;
-  position: absolute;
-  top: 10%;
-  left: 30%;
-  border-radius: 20px;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  min-height: 500px;
-}
-
-.loginLogo {
-  margin-top: 30px;
-}
-
-.title {
-  margin-top: 20px;
-}
-
-@media screen and (max-width: 900px) {
-  .formContainer {
-    height: 70%;
-    width: 80%;
-    background-color: white;
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    border-radius: 20px;
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-    text-align: center;
-  }
-}
-
-.bottomStyle {
-  margin-top: 20px;
-}
-
-.linkStyle {
-  color: #3777ee;
-  font-weight: 700;
-}
-
-.linkStyle:hover {
-  text-decoration: underline;
-  text-underline-offset: 1px;
+  padding-top: 10%;
 }
