--- a/app/[locales]/login/page.module.css
+++ b/app/[locales]/login/page.module.css
@@ -3,7 +3,9 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh; /* Ensure it takes at least the full viewport height */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
   padding-top: 10%;
 }
