--- a/app/[locales]/doctor/doctor.module.css
+++ b/app/[locales]/doctor/doctor.module.css
@@ -3,6 +3,6 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
